# PWC

./: .gitignore  README.md  meson.build
include/pwc/: drm.h  render.h  vulkan.h
include/pwc/render/: cube.frag.inc  cube.vert.inc  demo.h  demo_tex.ppm.h  drm.h  render.h  vulkan.h
include/pwc/render/scene/: node.h  scene.h
include/pwc/render/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
include/pwc/render/utils/: linmath.h  macro.h
include/pwc/render/vulkan/: vk-core.h  vk-debug.h  vulkan.h
scripts/: build.sh
src/: asd.c  drm.c  main.c  meson.build  vulkan.c
src/render/: demo.c  drm.c  esTransform.c  render.c  vulkan.c
src/render/scene/: node.c  scene.c
src/render/vulkan/: demo.c  esTransform.c  vk-core.c  vk-debug.c  vulkan.c
